tests/paczka1/fuzzy1/41488064.err
Error in line 5: UXzQ6OnO S971 42,5
Error in line 8: SER_it8 S352 54,2
Error in line 7: S967 S971 23,8
Error in line 18: 9MI S147 36,1
Error in line 14: SERNit8 S352 10,3
Error in line 21: 9MI S352 76,9
Error in line 24: SERNit8 S967 74,6
